maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:19: error: ';' expected but 'while' found.
  } while(estFaceMur())
    ^Escaper:23: error: Unmatched closing brace '}' ignored here
}
^